Support any color. switch from png to ascii

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
 <title>Hello!</title>
 <style>
     body {
-        width: 35em;
+        width: 36em;
         margin: 0 auto;
         font-family: Tahoma, Verdana, Arial, sans-serif;
         text-align: center;
@@ -12,9 +12,23 @@
 </style>
 </head>
 <body>
-<h1>Hello!</h1>
-<h2>Hostname: server_hostname</h2>
+<h1 style="font-size: 3em;[STYLE]">!HELLO!</h1>
+<hr>
+<div style="font-size:3em;text-align: center;[STYLE]">
+    <p>║<br>
+        ║<br>
+        
+        █░╩╩╩╩╩╩╩╩╩╩╩╩░█<br>
+        ╠ [DESC] ╣<br>
+        █░╦╦╦╦╦╦╦╦╦╦╦╦░█<br>
+        ║<br>
+        ║<br>
+    </p>
+</div>
+<h2>Container Name: server_hostname</h2>
 <h2>IP Address: server_address</h2>
-<h2>Version: nginx_version</h2>
+<h2>Nginx Version: nginx_version</h2>
+
+<hr>
 </body>
 </html>
