added NODE_NAME and updated readme

--- a/assets/index.html
+++ b/assets/index.html
@@ -12,22 +12,23 @@
 </style>
 </head>
 <body>
-<h1 style="font-size: 3em;[STYLE]">!HELLO!</h1>
+<h1 style="font-size: 3em;color:gray;">!HELLO!</h1>
 <hr>
 <div style="font-size:3em;text-align: center;[STYLE]">
-    <p>║<br>
+    <p>╦<br>
         ║<br>
         
         █░╩╩╩╩╩╩╩╩╩╩╩╩░█<br>
-        ╠ [DESC] ╣<br>
+        <span style="color:gray;">╠  [DESC]  ╣</span><br>
         █░╦╦╦╦╦╦╦╦╦╦╦╦░█<br>
         ║<br>
-        ║<br>
+        ╩<br>
     </p>
 </div>
-<h2>Container Name: server_hostname</h2>
+<h2>Hostname: server_hostname</h2>
 <h2>IP Address: server_address</h2>
 <h2>Nginx Version: nginx_version</h2>
+<h2>Node Name: NODE_NAME</h2>
 
 <hr>
 </body>
